--- a/test.properties
+++ b/test.properties
@@ -1,6 +1,6 @@
 driverClass = FirefoxDriver
 cookieValue = prod
-appPath = http://dev.aqua.oysterlabs.com/
+appPath = http://dev.aqua.oysterlabs.com
 userLogin = dkhramov@oysterlabs.com
 userPassword = dkhramov@oysterlabs.com
 userIncorrectLogin = failedUser
